--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                         <a id="link-button" href="#">Hire Me</a>
                 </div>
                 <div class="half-width">
-                        <img src="img/profile-2.png" alt="">
+                        <img src="img/1.jpg" alt="">
                 </div>
         </section>
         <section>
                 <div class="half-width">
-                        <img src="img/profile-4.png" alt="">
+                        <img src="img/2.jpg" alt="">
                 </div>
                 <div>
                         <h1 id="blue">ABOUT</h1>
@@ -66,11 +66,20 @@
                  </div>
         </section>
 
-        <section>
+        <section class="working-area">
                 <div class=" working">
-                        <h1 id="blue">WORK INQUIRY</h1>
-                        <a  id="link-button" href="">Lets Chat</a>
+                        <h1>WORK INQUIRY</h1>
+                        <a class="button" id="link-button" href="">Lets Chat</a>
                 </div>
         </section>
+        <footer class="footer">
+             
+                        <span id="dim-grey"> Stay Connected</span> <br>
+                        <p>ashfakmahbub006@gmail.com</p>
+                        <img src="img/Group 33059.png" alt="">
+                        <img src="img/image 6.png" alt="">
+                        <img src="img/image 7.png" alt="">
+               
+        </footer>
 </body>
 </html>
